--- a/main.html
+++ b/main.html
@@ -8,6 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name </label>
+		<input type="text" id="name" required><br><br>
+		<label for="email">Email </label>
+		<input type="email" id=email required><br><br>
+		<label for="male">Male</label>
+		<input name="gender" type="radio" id="male" required>
+		<label for="Female">Female</label>
+		<input name="gender" type="radio" id="female"required><br><br>
+		<label for="cars">Car Brands </label>
+		<select id=cars>
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedez">Mercedez</option>
+		</select>
+		<label for="carage">Car Age </label>
+		<input type="number" id="carage" required><br><br>
+		<label for="dop">Date of Purchase(dop)</label>
+		<input type="date" id="dop" required><br><br>
+		<label for="password">Password </label>
+		<input type="password" id=password required><br></br>
+		<button type="submit">submit</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
